Testing image link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </ul>
 <h2><strong>Assembly Instructions</strong></h2>
 <p><strong>Lay out your pieces and make sure the battery is still attached.</strong></p>
+<p><strong><img src="https://github.com/nwhoffman/LED_circuit_valentine/blob/main/scaled_IMG_3632.jpg" alt="Breadboard with battery" width="400" /></strong></p>
 <p>The location on the breadboard will be written as Column-Row. For example, Column D, Row 10 would be D-10</p>
 <h4><strong>Step 1:</strong> First, add the LED lights. The LEDs have a short wire and a long wire:&nbsp;</h4>
 <ul>
