--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </ul>
 <h2><strong>Assembly Instructions</strong></h2>
 <p><strong>Lay out your pieces and make sure the battery is still attached.</strong></p>
-<p><strong><img src="https://github.com/nwhoffman/LED_circuit_valentine/blob/main/scaled_IMG_3632.jpg" alt="Breadboard with battery" width="400" /></strong></p>
+<p><strong><img src="scaled_IMG_3632.jpg" alt="Image: Breadboard with battery" width="400" /></strong></p>
 <p>The location on the breadboard will be written as Column-Row. For example, Column D, Row 10 would be D-10</p>
 <h4><strong>Step 1:</strong> First, add the LED lights. The LEDs have a short wire and a long wire:&nbsp;</h4>
 <ul>
 <li>Put the long wire of the red LED into C-6 and the short wire into C-5</li>
 <li>Put the long wire of the rainbow LED in B-6 and the short wire into B-7</li>
 </ul>
+
+<p><strong><img src="scaled_IMG_3633.jpg" alt="Image: Breadboard with battery, resistors" width="400" /></strong></p>
+
 <p><strong>Step 2: Next, add the resistors. The 10 ohm resistor has a brown band. The 47 ohm resistor has a green band.&nbsp;</strong></p>
 <ul>
 <li>One wire of the 47-ohm resistor goes in column G-14</li>
