Updated with more images; formatting fixes

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 </ul>
 <h2><strong>Assembly Instructions</strong></h2>
 <p><strong>Lay out your pieces and make sure the battery is still attached.</strong></p>
-<p><strong><img src="scaled_IMG_3632.jpg" alt="Image: Breadboard with battery" width="400" /></strong></p>
+<p><img src="scaled_IMG_3632.jpg" alt="Image: board with battery" width="400" /></p>
 <p>The location on the breadboard will be written as Column-Row. For example, Column D, Row 10 would be D-10</p>
 <h4><strong>Step 1:</strong> First, add the LED lights. The LEDs have a short wire and a long wire:&nbsp;</h4>
 <ul>
-<li>Put the long wire of the red LED into C-6 and the short wire into C-5</li>
-<li>Put the long wire of the rainbow LED in B-6 and the short wire into B-7</li>
+<li>Put the long wire of the <strong>red LED</strong> into C-6 and the short wire into C-5</li>
+<li>Put the long wire of the <strong>rainbow LED</strong> in B-6 and the short wire into B-7</li>
 </ul>
-
-<p><strong><img src="scaled_IMG_3633.jpg" alt="Image: Breadboard with battery, resistors" width="400" /></strong></p>
-
+<p><img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors" width="400" /></p>
 <p><strong>Step 2: Next, add the resistors. The 10 ohm resistor has a brown band. The 47 ohm resistor has a green band.&nbsp;</strong></p>
 <ul>
 <li>One wire of the 47-ohm resistor goes in column G-14</li>
@@ -26,10 +24,12 @@
 <li>Bend the wires of the 47-ohm resistor over the battery so that the free end can fit into D-5.&nbsp;</li>
 <li>Bend the wires of the 10-ohm resistor over until the free end can be inserted into A-7.</li>
 </ul>
-<p><em>Be careful that the resistor wire is NOT resting against any other metal on the&nbsp;</em></p>
-<p><em>battery or LEDs.</em></p>
+<p><em>Be careful that the resistor wire is NOT resting against any other metal on the&nbsp;</em><em>battery or LEDs.</em></p>
+<p>The breadboard with the LEDs and both resistors should look like the following image:</p>
+<h4><strong><img src="scaled_IMG_3638.jpg" alt="Image: board with battery, LEDs, and 2 resistors" width="400" /></strong></h4>
 <h4><strong>Step 3: Finally, add the switch.</strong></h4>
 <ul>
 <li>The three wires of the switch go into Column J, Rows 12, 13, and 14.</li>
 <li>The orientation of the switch doesn&rsquo;t matter.</li>
 </ul>
+<p><img src="scaled_IMG_3639.jpg" alt="Image: completed board" width="400" /></p>
