--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <li>Put the long wire of the <strong>red LED</strong> into C-6 and the short wire into C-5</li>
 <li>Put the long wire of the <strong>rainbow LED</strong> in B-6 and the short wire into B-7</li>
 </ul>
-<p><img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors" width="400" /></p>
+<p><a href="https://github.com/nwhoffman/LED_circuit_valentine/blob/main/scaled_IMG_3633.jpg">
+  <img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors" width="400"/></a></p>
 <p><strong>Step 2: Next, add the resistors. The 10 ohm resistor has a brown band. The 47 ohm resistor has a green band.&nbsp;</strong></p>
 <ul>
 <li>One wire of the 47-ohm resistor goes in column G-14</li>
