Update image link , add new tab syntax

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <li>Put the long wire of the <strong>red LED</strong> into C-6 and the short wire into C-5</li>
 <li>Put the long wire of the <strong>rainbow LED</strong> in B-6 and the short wire into B-7</li>
 </ul>
-<p><a href="https://github.com/nwhoffman/LED_circuit_valentine/blob/main/scaled_IMG_3633.jpg">
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/1b5cce2b87a676a58ef0d666cc0a8cc4c67af7e0/scaled_IMG_3633.jpg" target="_blank">
   <img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors" width="400"/></a></p>
 <p><strong>Step 2: Next, add the resistors. The 10 ohm resistor has a brown band. The 47 ohm resistor has a green band.&nbsp;</strong></p>
 <ul>
