Update more image links; new tabs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </ul>
 <h2><strong>Assembly Instructions</strong></h2>
 <p><strong>Lay out your pieces and make sure the battery is still attached.</strong></p>
-<p><img src="scaled_IMG_3632.jpg" alt="Image: board with battery" width="400" /></p>
+
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3632.jpg" target="_blank">
+  <img src="scaled_IMG_3632.jpg" alt="Image: board with battery" width="400"/></a></p>
+
 <p>The location on the breadboard will be written as Column-Row. For example, Column D, Row 10 would be D-10</p>
 <h4><strong>Step 1:</strong> First, add the LED lights. The LEDs have a short wire and a long wire:&nbsp;</h4>
 <ul>
@@ -17,6 +20,7 @@
 </ul>
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/1b5cce2b87a676a58ef0d666cc0a8cc4c67af7e0/scaled_IMG_3633.jpg" target="_blank">
   <img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors" width="400"/></a></p>
+
 <p><strong>Step 2: Next, add the resistors. The 10 ohm resistor has a brown band. The 47 ohm resistor has a green band.&nbsp;</strong></p>
 <ul>
 <li>One wire of the 47-ohm resistor goes in column G-14</li>
@@ -27,10 +31,15 @@
 </ul>
 <p><em>Be careful that the resistor wire is NOT resting against any other metal on the&nbsp;</em><em>battery or LEDs.</em></p>
 <p>The breadboard with the LEDs and both resistors should look like the following image:</p>
-<h4><strong><img src="scaled_IMG_3638.jpg" alt="Image: board with battery, LEDs, and 2 resistors" width="400" /></strong></h4>
+
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3638.jpg" target="_blank">
+  <img src="scaled_IMG_3638.jpg" alt="Image: board with battery, LEDs, and 2 resistors" width="400"/></a></p>
+
 <h4><strong>Step 3: Finally, add the switch.</strong></h4>
 <ul>
 <li>The three wires of the switch go into Column J, Rows 12, 13, and 14.</li>
 <li>The orientation of the switch doesn&rsquo;t matter.</li>
 </ul>
-<p><img src="scaled_IMG_3639.jpg" alt="Image: completed board" width="400" /></p>
+
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3639.jpg" target="_blank">
+  <img src="scaled_IMG_3639.jpg" alt="Image: completed baord" width="400"/></a></p>
