--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>LED Lights</h1>
+<h1>LED Valentines: Build a light-up circuit</h1>
 <h2><strong>Components</strong></h2>
 <ul>
 <li aria-level="1">Tiny breadboard</li>
@@ -7,7 +7,7 @@
 <li aria-level="1">2 resistors (10 ohms - brown/black/black - gold; 47 ohms - green/purple/black - gold)</li>
 </ul>
 <h2><strong>Assembly Instructions</strong></h2>
-<p><strong>Lay out your pieces and make sure the battery is still attached.</strong></p>
+<p>Lay out your pieces and make sure the battery is still attached to the board. Make sure you have two resistors, two LED bulbs, and a switch.</p>
 
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3632.jpg" target="_blank">
   <img src="scaled_IMG_3632.jpg" alt="Image: board with battery" width="400"/></a></p>
@@ -18,8 +18,11 @@
 <li>Put the long wire of the <strong>red LED</strong> into C-6 and the short wire into C-5</li>
 <li>Put the long wire of the <strong>rainbow LED</strong> in B-6 and the short wire into B-7</li>
 </ul>
-<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/1b5cce2b87a676a58ef0d666cc0a8cc4c67af7e0/scaled_IMG_3633.jpg" target="_blank">
-  <img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors" width="400"/></a></p>
+
+
+
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3633.jpg" target="_blank">
+  <img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors, both ends attached" width="400"/></a></p>
 
 <p><strong>Step 2: Next, add the resistors. The 10 ohm resistor has a brown band. The 47 ohm resistor has a green band.&nbsp;</strong></p>
 <ul>
@@ -29,8 +32,15 @@
 <li>Bend the wires of the 47-ohm resistor over the battery so that the free end can fit into D-5.&nbsp;</li>
 <li>Bend the wires of the 10-ohm resistor over until the free end can be inserted into A-7.</li>
 </ul>
+
 <p><em>Be careful that the resistor wire is NOT resting against any other metal on the&nbsp;</em><em>battery or LEDs.</em></p>
-<p>The breadboard with the LEDs and both resistors should look like the following image:</p>
+
+<p> The resistors with one side attached is shown here.
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3634.jpg" target="_blank">
+  <img src="scaled_IMG_3634.jpg" alt="Image: board with battery and two resistors, one end attached" width="400"/></a></p>
+
+
+<p>The breadboard with the LEDs and both resistors completely attached should look like the following image:</p>
 
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3638.jpg" target="_blank">
   <img src="scaled_IMG_3638.jpg" alt="Image: board with battery, LEDs, and 2 resistors" width="400"/></a></p>
@@ -43,3 +53,8 @@
 
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3639.jpg" target="_blank">
   <img src="scaled_IMG_3639.jpg" alt="Image: completed baord" width="400"/></a></p>
+
+<p>The following circuit illustration can be used to identify if all of the components have been placed in the correct places.</p>
+
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/circuit_completed.png" target="_blank">
+  <img src="circuit_completed.png" alt="Image: completed baord diagram" width="400"/></a></p>
