--- a/index.html
+++ b/index.html
@@ -57,4 +57,4 @@
 <p>The following circuit illustration can be used to identify if all of the components have been placed in the correct places.</p>
 
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/complete_circuit_updated.png" target="_blank">
-  <img src="circuit_completed.png" alt="Image: completed baord diagram" width="400"/></a></p>
+  <img src="complete_circuit_updated.png" alt="Image: completed baord diagram" width="400"/></a></p>
