Additional edits to text

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>LED Valentines: Build a light-up circuit</h1>
+<h1>LED Valentine: Build a light-up circuit</h1>
 <h2><strong>Components</strong></h2>
 <ul>
 <li aria-level="1">Tiny breadboard</li>
@@ -24,7 +24,7 @@
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3633.jpg" target="_blank">
   <img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors, both ends attached" width="400"/></a></p>
 
-<p><strong>Step 2: Next, add the resistors. The 10 ohm resistor has a brown band. The 47 ohm resistor has a green band.&nbsp;</strong></p>
+<p><strong>Step 2: Next, add the resistors.
 <ul>
 <li>One wire of the 47-ohm resistor goes in column G-14</li>
 <li>One wire of the 10-ohm resistor goes into column F-14</li>
@@ -48,7 +48,6 @@
 <h4><strong>Step 3: Finally, add the switch.</strong></h4>
 <ul>
 <li>The three wires of the switch go into Column J, Rows 12, 13, and 14.</li>
-<li>The orientation of the switch doesn&rsquo;t matter.</li>
 </ul>
 
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3639.jpg" target="_blank">
