--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/scaled_IMG_3633.jpg" target="_blank">
   <img src="scaled_IMG_3633.jpg" alt="Image: board with battery and two resistors, both ends attached" width="400"/></a></p>
 
-<p><strong>Step 2: Next, add the resistors.
+<h4><strong>Step 2: Next, add the resistors.</strong></h4>
 <ul>
 <li>One wire of the 47-ohm resistor goes in column G-14</li>
 <li>One wire of the 10-ohm resistor goes into column F-14</li>
