Add completed project images and text

--- a/index.html
+++ b/index.html
@@ -57,3 +57,16 @@
 
 <p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/complete_circuit_updated.png" target="_blank">
   <img src="complete_circuit_updated.png" alt="Image: completed baord diagram" width="400"/></a></p>
+
+<h4><strong>Step 4: Attach the breadboard to the card (if you want).</strong></h4>
+<ul>
+<li>It will look similar to the following images. Adjust the location of the breadboard as needed to line up the LEDs with the heart.</li>
+<li>Or create your own design!</li>
+</ul>
+
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/IMG_20230215_101126522.jpg" target="_blank">
+  <img src="IMG_20230215_101126522.jpg" alt="Image: completed card with breadboard attached" width="400"/></a></p>
+
+
+<p><a href="https://raw.githubusercontent.com/nwhoffman/LED_circuit_valentine/main/IMG_20230215_101105794.jpg" target="_blank">
+  <img src="IMG_20230215_101105794.jpg" alt="Image: completed card, top view" width="400"/></a></p>
